# cuda-matrix

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
src/: MatrixMul.cpp  MatrixMul.h  main.cpp
src/gpu/: matrixMul.cu
tests/: test_matrix_mul.cpp
